EPUO-252: Added proxy user auditing support (#369)